--- a/Fetch1/web.config
+++ b/Fetch1/web.config
@@ -12,4 +12,10 @@
       <httpRuntime targetFramework="4.5" />
     </system.web>
 
+	<system.webServer>
+		<staticContent>
+			<mimeMap fileExtension=".woff2" mimeType="application/font-woff2" />
+		</staticContent>
+	</system.webServer>
+
 </configuration>
