--- a/Fetch1/web.config
+++ b/Fetch1/web.config
@@ -14,7 +14,7 @@
 
 	<system.webServer>
 		<staticContent>
-			<mimeMap fileExtension=".woff2" mimeType="application/font-woff2" />
+      <!--mimeMap fileExtension=".woff2" mimeType="application/font-woff2" /-->
 		</staticContent>
 	</system.webServer>
 
